--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h1>Hello world!</h1>
     </header>
     <main>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores fuga exercitationem animi, blanditiis officiis quibusdam temporibus natus magni, repellat quas numquam totam voluptatum sapiente. Nemo reprehenderit odit, voluptate, accusantium quisquam ullam nam molestias sint dolore corporis commodi, labore maiores voluptatem quo doloribus. Cumque libero magni expedita non, laudantium officia molestiae?</p>
+      <p>This is the place I want to be. I am learning how to make a sticky footer in the web development program at SAIT. This is my first project using this code. What do you think?</p>
     </main>
     <footer>
-      &copy; 2020 Tony
+      &copy; 2020 Rachel
     </footer>
   </div>
 </body>
